WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216390
JSDOMConvertSequences should have exception checks appropriately
https://bugs.webkit.org/show_bug.cgi?id=216390
Summary
JSDOMConvertSequences should have exception checks appropriately
Yusuke Suzuki
Reported
2020-09-10 17:53:18 PDT
JSDOMConvertSequences should have exception checks appropriately
Attachments
Patch
(6.35 KB, patch)
2020-09-10 17:54 PDT
,
Yusuke Suzuki
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-09-10 17:54:11 PDT
Created
attachment 408501
[details]
Patch
Yusuke Suzuki
Comment 2
2020-09-10 17:54:13 PDT
<
rdar://problem/68631333
>
Mark Lam
Comment 3
2020-09-10 20:26:31 PDT
Comment on
attachment 408501
[details]
Patch Thanks for fixing this.
EWS
Comment 4
2020-09-10 23:41:24 PDT
Committed
r266912
: <
https://trac.webkit.org/changeset/266912
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408501
[details]
.
Michael Saboff
Comment 5
2020-09-11 10:26:20 PDT
Comment on
attachment 408501
[details]
Patch r=me
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug