JSDOMConvertSequences should have exception checks appropriately https://bugs.webkit.org/show_bug.cgi?id=216390 <rdar://problem/68631333>

Reviewed by Mark Lam.

Source/WebCore:

Test: js/dom/frozen-array-exception-check.html

Add appropriate exception checks to JSDOMConvertSequences.

* bindings/js/JSDOMConvertSequences.h:
(WebCore::Detail::NumericSequenceConverter::convert):
(WebCore::JSConverter<IDLSequence<T>>::convert):
(WebCore::JSConverter<IDLFrozenArray<T>>::convert):

LayoutTests:

* js/dom/frozen-array-exception-check-expected.txt: Added.
* js/dom/frozen-array-exception-check.html: Added.


Canonical link: https://commits.webkit.org/229232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266912 268f45cc-cd09-0410-ab3c-d52691b4dbfc